test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_parse/plx1_function_param_none_array_1.plx
pub fn foo(x: [2]none) i32 {
    return x + 1
}

pub fn main(none) i32 {
    return 0
}
